<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Programme Bandama</string>
    <string name="last_synchronisation_date">Dernière synchronisation à %1$s</string>
    <string-array name="YesOrNo">
        <item>oui</item>
        <item>non</item>
    </string-array>
    <string-array name="lieuDeFormation">
        <item>Dans le ménage</item>
        <item>Place Publique</item>
        <item>Champs Ecole</item>


    </string-array>
    <string-array name="nomScienArbreConseille">
        <item>Akpi, Eho|Ricinodendron heudelotii|Strate 3</item>
        <item>Samba|Triplochiton scleroxylon|Strate 3</item>
        <item>Iroko|Milicia excelsa|Strate 3</item>
        <item>Acajou blanc|Khaya anthoteca|Strate 3</item>
        <item>Acajou Bassam|Khaya ivorensis|Strate 3</item>
        <item>Ilomba|Pycnanthus angolensis|Strate 3</item>
        <item>AKO|Antiaris toxicaria|Strate 3</item>
        <item>Kplé, Sako, Kaklou,Boborou |Irvingia gabonensis |Strate 3</item>
        <item>Irvingia grandifolia|Strate 3</item>
        <item>Emien|Alstonia boonei|Strate 3</item>
        <item>Pouo, Pri, Arbre à caoutchouc|Funtumia latifolia, F. elastica|Strate 3</item>
        <item>Niangon|Heritiera densifolia, Tarrietia utilis|Strate 3</item>
        <item>Framiré|Terminalia ivorensis|Strate 3</item>
        <item>Fraké|Terminalia superba|Strate 3</item>
        <item>Tiama|Entandrophragma angolense|Strate 3</item>
        <item>Bois bété|Mansonia altissima|Strate 3</item>
        <item>Tulipier d’Afrique|Spathodea campanulata |Strate 3</item>
        <item>Makoré|Tieghemella heckelii|Strate 3</item>
        <item>Poé|Strombosia pustulata|Strate 3</item>
        <item>Aniégré|Chrysophyllum spp./ Pouteria sp|Strate 3</item>
        <item>Bitei, bilè, atiokouo|Beilschmiedia manni|Strate 3</item>
        <item>Assamela|Pericopsis elata|Strate 3</item>
        <item>Azobé|Lophira alata|Strate 3</item>
        <item>Lebbeck, Okouro, Bangbaye |Albizia spp.(lebbeck, guachepele,  adiantifolia)|Strate 3</item>
        <item>Adjouaba, Safoutier|Dacryodes klaineana|Strate 3</item>
        <item>Abalé|Petersianthus macrocarpus|Strate 3</item>
        <item>Aloma|Ficus capensis|Strate 3</item>
        <item>Koya|Morinda lucida|Strate 3</item>
        <item>Koto|Pterygota macrocarpa|Strate 3</item>
        <item>Poivre long|Xylopia aethiopica|Strate 2</item>
        <item>Avocatier|Persea americana*|Strate 2</item>
        <item>Manguier|Mangifera indica*|Strate 2</item>
        <item>Colatier|Cola nitida|Strate 2</item>
        <item>Cocotier|Cocos nucifera|Strate 2</item>
        <item>Goyavier|Psidium goyava|Strate 2</item>
        <item>Igname de blanc|Artocarpus altilis |Strate 2</item>
        <item>Kaklou |Irvingia wombolu|Strate 2</item>
        <item>Safoutié|Dacryodes klaineana|Strate 2</item>
        <item>Oranger|Citrus sinensis|Strate 1</item>
        <item>Citronnier|Citrus limon|Strate 1</item>
        <item>Mandarinier|Citus reticulata*|Strate 1</item>
        <item>Pamplemousse|Citrus grandis| paradisi*|Strate 1</item>
        <item>Goyavier|Psiduim goyava|Strate 1</item>
        <item>Corossolier|Annoma Muricata|Strate 1</item>
        <item>Gmelina|Gmelina arborea|Strate 1</item>
        <item>Teck|Tectona grandis|Strate 1</item>
        <item>Isope africaine|Newbouldia leavis|Strate 1</item>
        <item>Caféier|Coffea canephora|Strate 1</item>
        <item>Palmier à huile|Elaeis guineensis|Strate 1</item>
        <item>Gliricidia|Gliricidia sépium|Strate 1</item>
        <item>Albizzia|Albizzia sp|Strate 1</item>
        <item>Acacia|Acacia mangium|Strate 1</item>
        <item>Acacia auriculiformis|Strate 1</item>
    </string-array>
    <string-array name="stratArbrConseille">
        <item>Strate 3</item>
        <item>Strate 3</item>
        <item>Strate 3</item>
        <item>Strate 3</item>
        <item>Strate 3</item>
        <item>Strate 3</item>
        <item>Strate 3</item>
        <item>Strate 3</item>
        <item>Strate 3</item>
        <item>Strate 3</item>
        <item>Strate 3</item>
        <item>Strate 3</item>
        <item>Strate 3</item>
        <item>Strate 3</item>
        <item>Strate 3</item>
        <item>Strate 3</item>
        <item>Strate 3</item>
        <item>Strate 3</item>
        <item>Strate 3</item>
        <item>Strate 3</item>
        <item>Strate 3</item>
        <item>Strate 3</item>
        <item>Strate 3</item>
        <item>Strate 3</item>
        <item>Strate 3</item>
        <item>Strate 3</item>
        <item>Strate 3</item>
        <item>Strate 3</item>
        <item>Strate 3</item>
        <item>Strate 2</item>
        <item>Strate 2</item>
        <item>Strate 2</item>
        <item>Strate 2</item>
        <item>Strate 2</item>
        <item>Strate 2</item>
        <item>Strate 2</item>
        <item>Strate 2</item>
        <item>Strate 2</item>
        <item>Strate 1</item>
        <item>Strate 1</item>
        <item>Strate 1</item>
        <item>Strate 1</item>
        <item>Strate 1</item>
        <item>Strate 1</item>
        <item>Strate 1</item>
        <item>Strate 1</item>
        <item>Strate 1</item>
        <item>Strate 1</item>
        <item>Strate 1</item>
        <item>Strate 1</item>
        <item>Strate 1</item>
        <item>Strate 1</item>
        <item>Strate 1</item>
    </string-array>
    <string-array name="listStrat">
        <item>Strate 3</item>
        <item>Strate 2</item>
        <item>Strate 1</item>
    </string-array>
    <string-array name="entity_example">
        <item>Bonnes Pratiques Agricoles BPA</item>
        <item>Bonnes Pratiques Sociales BPS</item>
        <item>Bonnes Pratiques Environementales</item>
    </string-array>
    <string-array name="theme_example">
        <item>Theme 1</item>
        <item>Theme 2</item>
        <item>Theme 3</item>
        <item>Theme 4</item>
    </string-array>
    <string-array name="femmeActivite">
        <item>Agricole</item>
        <item>Non agricole</item>
    </string-array>
    <string-array name="parcelleObtenu">
        <item>Location</item>
        <item>Achat</item>
        <item>Don</item>
    </string-array>
    <string-array name="capitalDemarrag">
        <item>Vente de cacao</item>
        <item>AVEC</item>
        <item>Association</item>
        <item>Subvention</item>
        <item>Micro Crédit</item>
        <item>Autre</item>
    </string-array>
    <string-array name="nomActiviteAgr">
        <item>Cacao</item>
        <item>Café</item>
        <item>Hévéa</item>
        <item>Palmier</item>
        <item>Anarcade</item>
        <item>Banane</item>
        <item>Riz</item>
        <item>Igname</item>
        <item>Manioc</item>
        <item>Maîs</item>
        <item>Autre</item>
    </string-array>
    <string-array name="nomActiviteNAgr">
        <item>Commerce</item>
        <item>Elevage</item>
        <item>Couture</item>
        <item>Coiffure</item>
        <item>Artisant</item>
        <item>Mécano</item>
        <item>Autre</item>
    </string-array>
    <string-array name="etat_epi">
        <item>bon</item>
        <item>mauvais</item>
        <item>délabrement</item>
    </string-array>
    <string-array name="agricoleActivite">
        <item>Culture perenne</item>
        <item>Cultures vivrières</item>
        <item>Elevage</item>
        <item>Pisciculture</item>
    </string-array>
    <string-array name="noAgricoleActivite">
        <item>Couture</item>
        <item>Coiffure</item>
        <item>Location</item>
    </string-array>
    <string-array name="type_intrant">
        <item>Compost</item>
        <item>Déchets animaux</item>
        <item>Fiente</item>
        <item>Bouse de vache</item>
        <item>Engrais chimique</item>
        <item>Engrais foliaire</item>
        <item>Biofertilisant</item>
        <item>Insecticide</item>
        <item>Insecticide organique</item>
        <item>Insecticide chimique</item>
        <item>Fongicide</item>
        <item>Nematicide</item>
        <item>Herbicide</item>
        <item>NPK</item>
        <item>Pesticides</item>
        <item>Autre</item>
    </string-array>
    <string-array name="delai_arbre">
        <item>12 dernier mois</item>
        <item>Il y a 2ans</item>
        <item>Au dela de 02 ans</item>
    </string-array>
    <string-array name="personne_applicant">
        <item>Producteur</item>
        <item>Applicateur coop</item>
        <item>Independant</item>
    </string-array>
    <string-array name="mesure_protection">
        <item>barriere de végétation</item>
        <item>Zone tampon</item>
        <item>Autre</item>
    </string-array>
    <string-array name="niveau_pente">
        <item>Forte</item>
        <item>Douce</item>
        <item>Moyenne</item>
    </string-array>
    <string-array name="type_formation">
        <item>Cible</item>
        <item>Groupe</item>
    </string-array>
    <string-array name="InsectQuantifie">
        <item>Faible</item>
        <item>Moins</item>
        <item>Elevé</item>
    </string-array>
    <string-array name="cible_formation">
        <item>Staff</item>
        <item>Membre</item>
    </string-array>
    <string-array name="example_pilier">
        <item>Pilier 1</item>
        <item>Pilier 2</item>
        <item>Pilier 3</item>
        <item>Pilier 4</item>
        <item>Pilier 5</item>
    </string-array>
    <string-array name="listeInsectes">
        <item>Mirides</item>
        <item>Punaises</item>
        <item>Foreurs</item>
        <item>Chenilles</item>
    </string-array>
    <string-array name="maladieList">
        <item>Punaises</item>
        <item>Mirides</item>
        <item>Foreurs</item>
        <item>Chenilles</item>
        <item>Pourriture Brune</item>
    </string-array>
    <string-array name="typeIntrant">
        <item>Insecticides</item>
        <item>Fongicides</item>
        <item>Nematicide</item>
        <item>Herbicides</item>
        <item>Acaricides</item>
        <item>Pesticides</item>
    </string-array>
    <string-array name="classToxiq">
        <item>I</item>
        <item>IA</item>
        <item>IB</item>
        <item>II</item>
        <item>III</item>
        <item>IV</item>
    </string-array>
    <string-array name="bank_paiement">
        <item>Virement bancaire</item>
        <item>Mobile Money</item>
        <item>Aucun</item>
    </string-array>
    <string-array name="operateur">
        <item>Orange</item>
        <item>MTN</item>
        <item>Moov</item>
        <item>Wave</item>
        <item>Push</item>
    </string-array>
    <string-array name="type_produit">
        <item>Ordinaire</item>
        <item>Certifie</item>
    </string-array>
    <string-array name="recentWork">
        <item>Le défrichage à la machette</item>
        <item>Le port de charge lourde</item>
        <item>Manipulation de Produits Agrochimiques</item>
        <item>Les défrichages</item>
        <item>Le bucheronnage</item>
        <item>Production de Charbons</item>
        <item>La Trouaison</item>
        <item>La chasse aux gibiers avec une arme</item>
        <item>Recolte avec Machette ou objets Tranchants</item>
        <item>Brulage des parcelles</item>
        <item>L’Abattage des arbres</item>
        <item>La conduite d’engins motorisé</item>
        <item>Aucun</item>
    </string-array>
    <string name="annuler">ANNULER</string>
    <string name="v_rifier">VÉRIFIER</string>
    <string name="selectionner_une_section">Selectionner une section</string>
    <string name="selectionner_une_localit">Selectionner une localité</string>
    <string name="selectionner_un_producteur">Selectionner un producteur</string>
    <string name="informations_sur_le_producteur">Informations sur le producteur</string>
</resources>