<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layout_EvalPostPlant"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    tools:context=".activities.forms.PostPlantingEvalActivity">

    <RelativeLayout
        android:background="@color/progband_gris"
        android:id="@+id/linealToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/clickCloseBtn"
            android:layout_width="@dimen/page_icon_head_dim35"
            android:layout_height="@dimen/page_icon_head_dim35"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/ic_back_black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_48sdp"
                android:layout_height="@dimen/_48sdp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@mipmap/ic_launcher_trans" />

            <androidx.appcompat.widget.AppCompatTextView
                android:textColor="@color/text_color_white"
                android:layout_gravity="center_horizontal"
                android:id="@+id/labelTitleMenuAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="FICHE EVALUATION POST-PLANTING"
                app:textAllCaps="true"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageDraftBtn"
            android:layout_width="@dimen/page_icon_head_dim35"
            android:layout_height="@dimen/page_icon_head_dim35"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/_7sdp"
            android:visibility="visible"
            android:src="@drawable/baseline_send_and_archive_white" />

    </RelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp" />

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_16sdp"
            android:paddingTop="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingBottom="@dimen/_30sdp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_1sdp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="25dp"
                app:cardElevation="8dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded_cardview_with_border_brown"
                    android:orientation="vertical"
                    android:padding="@dimen/_20sdp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:weightSum="5">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:layout_weight="1"
                            android:background="@color/dark_gray" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:textColor="@color/text_color_white"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:text="@string/informations_sur_le_producteur"
                            android:textAllCaps="true"
                            android:textSize="@dimen/_14ssp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:layout_weight="1"
                            android:background="@color/dark_gray" />

                    </LinearLayout>


                    <Space
                        android:layout_width="@dimen/_5sdp"
                        android:layout_height="@dimen/_10sdp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:textColor="@color/text_color_white"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/_12sdp"
                            android:text="@string/selectionner_une_section"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_background">

                            <Space
                                android:layout_width="@dimen/_5sdp"
                                android:layout_height="@dimen/_10sdp" />

                            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                                android:tag="section"
                                android:id="@+id/selectSectionEvalPostPlant"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_37sdp"
                                android:spinnerMode="dialog" />

                        </LinearLayout>

                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_10sdp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:textColor="@color/text_color_white"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/_12sdp"
                            android:text="@string/selectionner_une_localit"

                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_background">

                            <Space
                                android:layout_width="@dimen/_5sdp"
                                android:layout_height="@dimen/_10sdp" />

                            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                                android:tag="localite"
                                android:id="@+id/selectLocaliteEvalPostPlant"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_37sdp"
                                android:spinnerMode="dialog" />

                        </LinearLayout>

                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_10sdp" />

                    <LinearLayout
                        android:id="@+id/linearProducteurContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:textColor="@color/text_color_white"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/_12sdp"
                            android:text="@string/selectionner_un_producteur"

                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_background">

                            <Space
                                android:layout_width="@dimen/_5sdp"
                                android:layout_height="@dimen/_10sdp" />

                            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                                android:tag="producteurId"
                                android:id="@+id/selectProducteurEvalPostPlant"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_37sdp"
                                android:spinnerMode="dialog" />

                        </LinearLayout>

                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_10sdp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_1sdp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="25dp"
                app:cardElevation="8dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded_cardview_with_border_brown"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/_20sdp"
                    android:paddingBottom="@dimen/_20sdp"
                    android:paddingHorizontal="@dimen/_2sdp"
                    >


                    <androidx.appcompat.widget.AppCompatTextView
                        android:textColor="@color/text_color_white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:gravity="center_horizontal"
                        android:textSize="@dimen/page_title_dim14"
                        android:text="LISTE DES ESPECES D'ARBRE"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_5sdp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerArbreListEvalPostPlant"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="3"
                        tools:listitem="@layout/evaluat_postplant_item_list" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:textColor="@color/text_color_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/_12sdp"
                    android:textSize="@dimen/_10sdp"
                    android:text="Date d'evaluation"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_37sdp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:tag="date_planting"
                        android:id="@+id/editDateEvalPostPlant"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/rounded_background"
                        android:editable="false"
                        android:ellipsize="end"
                        android:focusable="false"
                        android:hint="JJ-MM-AAAA"
                        android:inputType="textCapCharacters"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:textAllCaps="true"
                        android:textSize="@dimen/page_input_content_dim13" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        app:srcCompat="@drawable/ic_date_calendar" />

                </RelativeLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:textSize="@dimen/page_button_text_dim13"
                    android:id="@+id/clickCancelEvalPostPlant"
                    style="@style/OptionsButton_Active"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:backgroundTint="@color/divider"
                    android:elevation="0dp"
                    android:textColor="@color/text_color_white"
                    android:text="@string/annuler"
                    app:cornerRadius="@dimen/_37sdp"
                    app:icon="@drawable/baseline_cancel_send_white"
                    app:iconSize="@dimen/page_icon_other_dim20"
                    app:iconGravity="start" />

                <com.google.android.material.button.MaterialButton
                    android:textSize="@dimen/page_button_text_dim13"
                    android:id="@+id/clickSaveEvalPostPlanting"
                    style="@style/OptionsButton_Active"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:backgroundTint="@color/progband_green"
                    android:elevation="0dp"
                    app:iconTint="@color/white_color"
                    android:text="@string/v_rifier"
                    app:cornerRadius="@dimen/_37sdp"
                    app:icon="@drawable/baseline_schedule_send_prev_white"
                    app:iconSize="@dimen/page_icon_other_dim20"
                    app:iconGravity="start" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
